PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Plan__c/Interface_Service_Plan__c.object-meta.xml
<CustomObject>
    <description>Interface Service Plan</description>
    <label>Interface Service Plan</label>
    <nameField>
        <displayFormat>IF_P_{00000}</displayFormat>
        <label>Interface Service Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>