PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Plan__c/fields/Detail_Key__c.field-meta.xml
<CustomField>
    <fullName>Detail_Key__c</fullName>
    <description>인터페이스 상세항목에서 항목구분이 OUT이면서 소스필드타입이 MAP 또는 LIST인 경우인 필드 항목ID을 기재</description>
    <inlineHelpText>인터페이스 상세항목에서 항목구분이 OUT이면서 소스필드타입이 MAP 또는 LIST인 경우인 필드 항목ID을 기재</inlineHelpText>
    <label>I/F 상세항목ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>