PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Plan__c/fields/DML__c.field-meta.xml
<CustomField>
    <fullName>DML__c</fullName>
    <description>SELECT, UPSERT, DELTE, SUB-SELECT, COUNT와 같이 테이블에 수행할 쿼리 유형을 기재
(SUB-SELECT는 동일 테이블내에서 상위값이 없는 경우 N차로 쿼리를 수행함)</description>
    <inlineHelpText>SELECT, UPSERT, DELTE, SUB-SELECT, COUNT와 같이 테이블에 수행할 쿼리 유형을 기재
(SUB-SELECT는 동일 테이블내에서 상위값이 없는 경우 N차로 쿼리를 수행함)</inlineHelpText>
    <label>수행내용</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SELECT</fullName>
                <default>true</default>
                <label>SELECT</label>
            </value>
            <value>
                <fullName>UPSERT</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>SUB-SELECT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>