PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Plan__c/fields/In_Out_Type__c.field-meta.xml
<CustomField>
    <fullName>In_Out_Type__c</fullName>
    <description>요청 또는 응답에 대한 수행유형(IN:요청, OUT:응답)</description>
    <inlineHelpText>요청 또는 응답에 대한 수행유형(IN:요청, OUT:응답)</inlineHelpText>
    <label>처리유형</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
                <default>true</default>
                <label>IN</label>
            </value>
            <value>
                <fullName>OUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>