PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Plan__c/fields/Interceptor_Code__c.field-meta.xml
<CustomField>
    <fullName>Interceptor_Code__c</fullName>
    <description>고객의 요구사항에 의해 특정 조회 조건에 대해 인터셉터 해서 개발자가 개발한 소스를 반영하기 위한 업무예외 구분 코드
(업무처리를 위해선 개발자가 InterfaceInterceptor 클래스에 소스 구현이 필요함)</description>
    <inlineHelpText>고객의 요구사항에 의해 특정 조회 조건에 대해 인터셉터 해서 개발자가 개발한 소스를 반영하기 위한 업무예외 구분 코드
(업무처리를 위해선 개발자가 InterfaceInterceptor 클래스에 소스 구현이 필요함)</inlineHelpText>
    <label>인터셉터 코드</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WHERE</fullName>
            </value>
            <value>
                <fullName>HAVING</fullName>
            </value>
            <value>
                <fullName>ORDER_BY</fullName>
                <label>ORDER BY</label>
            </value>
            <value>
                <fullName>LIMIT</fullName>
            </value>
            <value>
                <fullName>AFTER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>