PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Plan__c/fields/Interface_Id__c.field-meta.xml
<CustomField>
    <fullName>Interface_Id__c</fullName>
    <label>Interface Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>