PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Plan__c/fields/Interface_Service_Detail__c.field-meta.xml
<CustomField>
    <fullName>Interface_Service_Detail__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Interface Service Detail</description>
    <inlineHelpText>Interface Service Detail</inlineHelpText>
    <label>Interface Service Detail</label>
    <referenceTo>Interface_Service_Detail__c</referenceTo>
    <relationshipLabel>Interface Service Plan</relationshipLabel>
    <relationshipName>Interface_Service_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>