PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Plan__c/fields/Limit_Count__c.field-meta.xml
<CustomField>
    <fullName>Limit_Count__c</fullName>
    <description>Select 조회 조건 제한 개수 ex) LIMIT 100</description>
    <inlineHelpText>Select 조회 조건 제한 개수 ex) LIMIT 100</inlineHelpText>
    <label>Limit개수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>