PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Plan__c/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <description>인터페이스를 처리할 순서를 숫자로 기재</description>
    <inlineHelpText>인터페이스를 처리할 순서를 숫자로 기재</inlineHelpText>
    <label>수행순번</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>