PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Plan__c/fields/Plan_Key__c.field-meta.xml
<CustomField>
    <fullName>Plan_Key__c</fullName>
    <description>수행계획의 고유한 ID를 기재(규칙:인터페이스ID_수행순번)</description>
    <externalId>true</externalId>
    <inlineHelpText>수행계획의 고유한 ID를 기재(규칙:인터페이스ID_수행순번)</inlineHelpText>
    <label>수행계획ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>