PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Plan__c/fields/Table__c.field-meta.xml
<CustomField>
    <fullName>Table__c</fullName>
    <description>select 및 DML이 수행될 테이블명을 기재</description>
    <inlineHelpText>select 및 DML이 수행될 테이블명을 기재</inlineHelpText>
    <label>테이블명</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>