PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Interface_Service_Detail__c</columns>
    <columns>Plan_Key__c</columns>
    <columns>Detail_Key__c</columns>
    <columns>Order_No__c</columns>
    <columns>Table__c</columns>
    <columns>DML__c</columns>
    <columns>In_Out_Type__c</columns>
    <columns>Interceptor_Code__c</columns>
    <columns>Limit_Count__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>